--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="container">
       <h2>About Ogun State</h2>
       <p>Ogun State, created in 1976, is a vibrant southwestern state in Nigeria. Its capital is Abeokuta, famous for the iconic Olumo Rock. The state is a hub of industry, education, and culture, with top institutions like Covenant University and Babcock University.</p>
-      <img src="/WhatsApp Image 2025-07-17 at 4.06.15 AM.jpeg" alt="Abeokuta View" />
+      <img src="WhatsApp Image 2025-07-17 at 4.06.15 AM.jpeg" alt="Abeokuta View" />
     </div>
   </section>
 
@@ -47,7 +47,7 @@
     <div class="container">
       <h2>Culture & People</h2>
       <p>The people of Ogun State are predominantly Yoruba. The state is rich in tradition, festivals, arts, and crafts like Adire fabric making. Cultural events like the Lisabi Festival celebrate ancestral heritage and community unity.</p>
-      <img src="/WhatsApp Image 2025-07-17 at 4.13.43 AM.jpeg" alt="">
+      <img src="WhatsApp Image 2025-07-17 at 4.13.43 AM.jpeg" alt="">
     </div>
   </section>
 
@@ -56,7 +56,7 @@
     <div class="container">
       <h2>Tourist Attractions</h2>
       <p>Visit Olumo Rock, Centenary Hall, and the beaches of Ijebu. The state blends history with modernity—perfect for tourism, sightseeing, and relaxation.</p>
-      <img src="/WhatsApp Image 2025-07-17 at 4.06.13 AM.jpeg" alt="Olumo Rock" />
+      <img src="WhatsApp Image 2025-07-17 at 4.06.13 AM.jpeg" alt="Olumo Rock">
     </div>
   </section>
 
@@ -66,12 +66,12 @@
     <h3> Gallery</h3>
         <div class="gallery-grid">
 
-    <img src="/WhatsApp Image 2025-07-17 at 4.06.13 AM (1).jpeg" alt="">
-    <img src="/WhatsApp Image 2025-07-17 at 4.06.13 AM.jpeg" alt="">
-    <img src="/WhatsApp Image 2025-07-17 at 4.06.15 AM (1).jpeg" alt="">
-    <img src="/WhatsApp Image 2025-07-17 at 4.06.15 AM.jpeg" alt="">
-    <img src="/WhatsApp Image 2025-07-17 at 4.06.16 AM.jpeg" alt="">
-    <img src="/WhatsApp Image 2025-07-17 at 4.13.43 AM.jpeg" alt="">
+    <img src="WhatsApp Image 2025-07-17 at 4.06.13 AM (1).jpeg" alt="">
+    <img src="WhatsApp Image 2025-07-17 at 4.06.13 AM.jpeg" alt="">
+    <img src="WhatsApp Image 2025-07-17 at 4.06.15 AM (1).jpeg" alt="">
+    <img src="WhatsApp Image 2025-07-17 at 4.06.15 AM.jpeg" alt="">
+    <img src="WhatsApp Image 2025-07-17 at 4.06.16 AM.jpeg" alt="">
+    <img src="WhatsApp Image 2025-07-17 at 4.13.43 AM.jpeg" alt="">
   </div>
   </div>
 </section>
